--- a/index.html
+++ b/index.html
@@ -1,257 +1,11 @@
 <!doctype html>
-<html lang="ko">
-<head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>사토시의지갑</title>
-<meta name="description" content="업비트·빗썸 실시간 급등 · 멀티타임프레임 타점 (거래 없음)"/>
-<style>
-:root{--bg:#0b1220;--panel:#0f172a;--line:#1e293b;--text:#e5e7eb;--muted:#94a3b8;--up:#10b981;--down:#ef4444;--chip:#1f2937;--blue:#60a5fa}
-*{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Noto Sans KR,Malgun Gothic,sans-serif}
-.wrap{max-width:1200px;margin:24px auto;padding:16px}
-h1{font-size:28px;margin:4px 0 12px}
-.sub{color:#93c5fd;opacity:.85;font-size:13px}
-.panel{background:var(--panel);border:1px solid var(--line);border-radius:14px;padding:14px;margin:14px 0}
-.row{display:grid;gap:12px}
-.btn{padding:8px 12px;border-radius:10px;border:1px solid var(--line);background:#0b1b33;color:#dbeafe;cursor:pointer}
-.btn.sec{background:#111827;color:#cbd5e1}
-.tab button{padding:8px 12px;border:1px solid var(--line);background:#0b1b33;color:#dbeafe;border-radius:10px;margin-right:6px;cursor:pointer}
-.tab .on{background:#1d2a49}
-.searchbar{display:flex;gap:10px;margin:12px 0}
-.searchbar input{flex:1;padding:14px;border-radius:12px;border:1px solid var(--line);background:#0b1327;color:var(--text)}
-table{width:100%;border-collapse:collapse;table-layout:fixed}
-th,td{padding:10px;border-bottom:1px dashed var(--line);white-space:nowrap}
-th{text-align:left;color:#93c5fd}
-.right{text-align:right}
-.mono{font-variant-numeric:tabular-nums;font-feature-settings:'tnum' 1}
-.chip{display:inline-flex;gap:6px;align-items:center;border:1px solid var(--line);padding:6px 10px;border-radius:99px;background:var(--chip);font-size:12px;min-height:28px}
-.chip.ok{color:#86efac;background:#052e2b;border-color:#134e4a}
-.chip.warn{color:#fde68a;background:#3b1d0b;border-color:#7c2d12}
-.chip.danger{color:#fecaca;background:#2f1313;border-color:#7f1d1d}
-.up{color:var(--up)} .down{color:var(--down)}
-.section-title{display:flex;align-items:center;gap:8px;margin-bottom:6px}
-.section-title .dot{width:8px;height:8px;border-radius:50%;background:#38bdf8;display:inline-block}
-.card{background:#0c1831;border:1px solid var(--line);border-radius:12px;padding:12px}
-.muted{color:var(--muted)}
-</style>
-</head>
-<body>
-<div class="wrap">
-  <h1>사토시의지갑</h1>
-  <div class="sub">검색 → 현재가/매수·매도·손절/상승%·하락% 예상치/위험도/코멘트 · 실시간 급등(업비트·빗썸 분리)</div>
-
-  <!-- 거래소 탭 -->
-  <div class="panel tab" style="display:flex;align-items:center;gap:10px">
-    <button id="tabUp" class="on">업비트</button>
-    <button id="tabBh">빗썸</button>
-  </div>
-
-  <!-- 검색 -->
-  <div class="panel">
-    <div class="searchbar">
-      <input id="q" placeholder="코인명/심볼/시장 (예: 비트코인, BTC, KRW-BTC, 리플)" autocomplete="off"/>
-      <button id="btn" class="btn">검색</button>
-    </div>
-    <div id="chips" style="display:flex;gap:8px;flex-wrap:wrap"></div>
-
-    <div style="margin-top:10px" class="card">
-      <table>
-        <thead>
-          <tr>
-            <th>기준봉</th><th>시장상태</th><th>위험도</th><th>상승 예상</th><th>하락 예상</th>
-            <th class="right">매수1</th><th class="right">매수2</th>
-            <th class="right">매도1</th><th class="right">매도2</th>
-            <th class="right">손절</th>
-          </tr>
-        </thead>
-        <tbody id="result"><tr>
-          <td colspan="10" class="muted">검색 후 여기 표시</td>
-        </tr></tbody>
-      </table>
-      <div id="oneLine" class="muted" style="margin-top:8px">-</div>
-    </div>
-  </div>
-
-  <!-- 실시간 급등 (업비트/빗썸 분리) -->
-  <div class="row" style="grid-template-columns:1fr 1fr">
-    <div class="panel">
-      <div class="section-title"><span class="dot"></span><b>실시간 급등 (업비트)</b><span id="tsU" class="muted" style="margin-left:8px">-</span></div>
-      <div id="topU"></div>
-    </div>
-    <div class="panel">
-      <div class="section-title"><span class="dot"></span><b>실시간 급등 (빗썸)</b><span id="tsB" class="muted" style="margin-left:8px">-</span></div>
-      <div id="topB"></div>
-    </div>
-  </div>
-
-  <div class="muted" style="margin-top:10px">※ 정보 제공/교육용, 거래 책임은 이용자에게 있습니다.</div>
-</div>
-
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Redirecting…</title>
 <script>
-/* ====== 설정 ====== */
-const APP = {
-  EX: 'UPBIT',                     // 현재 탭
-  UPBIT_API_BASE: "/api/upbit",
-  BITHUMB_API_BASE: "/api/bithumb",
-  TOP_N: 10,
-  TOP_INTERVAL_MS: 2000            // 2초 갱신
-};
-
-/* ===== 유틸 ===== */
-const $ = sel => document.querySelector(sel);
-const fmt = n => isNaN(n)?'-':Number(n).toLocaleString('ko-KR');
-const pfmt = n => isNaN(n)?'-':((n>0?'+':'')+n.toFixed(2)+'%');
-function krwTick(p){ if(p>=2_000_000)return 1000; if(p>=1_000_000)return 500; if(p>=500_000)return 100; if(p>=100_000)return 50; if(p>=10_000)return 10; if(p>=1_000)return 1; if(p>=100)return .1; if(p>=10)return .01; if(p>=1)return .001; return .0001; }
-function roundToTick(v,ref){const s=krwTick(ref??v); return Math.round(v/s)*s;}
-function fmtPrice(v, ref){ if(!isFinite(v)) return '-'; const s=krwTick(ref??v); const r=Math.max(roundToTick(v,ref), s); const d=s>=1?0:s>=.1?1:s>=.01?2:s>=.001?3:4; return Number(r).toLocaleString('ko-KR',{minimumFractionDigits:d,maximumFractionDigits:d}); }
-
-function EMA(a,p){const k=2/(p+1);let o=[],pr=null;for(let i=0;i<a.length;i++){const v=a[i];pr=(pr===null)?v:(v-pr)*k+pr;o.push(pr)}return o}
-function RSI(c,p=14){if(c.length<=p)return[];let g=[],l=[];for(let i=1;i<c.length;i++){const d=c[i]-c[i-1];g.push(Math.max(d,0));l.push(Math.max(-d,0))}let ag=g.slice(0,p).reduce((a,b)=>a+b,0)/p,al=l.slice(0,p).reduce((a,b)=>a+b,0)/p,o=[100-(100/(1+(ag/(al||1e-9))))];for(let i=p;i<g.length;i++){ag=(ag*(p-1)+g[i])/p;al=(al*(p-1)+l[i])/p;o.push(100-(100/(1+(ag/(al||1e-9)))))}return o}
-function ATR(h,l,c,p=14){const tr=[];for(let i=0;i<h.length;i++){const pr=c[i-1]??c[i];tr.push(Math.max(h[i]-l[i],Math.abs(h[i]-pr),Math.abs(l[i]-pr)))}return SMA(tr,p)}
-function SMA(a,p){if(a.length<p)return[];let o=[],s=0;for(let i=0;i<a.length;i++){s+=a[i];if(i>=p)s-=a[i-p];if(i>=p-1)o.push(s/p)}return o}
-function hhll(a,n){const x=a.slice(-n);return{hh:Math.max(...x),ll:Math.min(...x)}}
-function marketPhase(rsi,ema20,ema50){ if(rsi>65&&ema20>ema50) return '불장'; if(rsi>55&&ema20>=ema50) return '상승장'; if(rsi<45&&ema20<ema50) return '하락장'; return '중립';}
-function riskFromAtrPct(p){return p>3.5?'높음':p>2?'보통':'낮음';}
-function witty(phase,risk){ if(risk==='높음')return '변동 큼: 분할·손절 설정 필수'; if(phase==='불장')return '추세 강함: 익절 구간만 정해두기'; if(phase==='하락장')return '관망/역추세 소액만'; return '중립: 지지/저항 구간에서만 분할';}
-
-/* ===== 상태칩 ===== */
-function paintChips(o){
-  const chips=$('#chips'); const frag=document.createDocumentFragment();
-  const mk=(t,cls)=>{const s=document.createElement('span'); s.className='chip '+(cls||''); s.textContent=t; return s;};
-  frag.appendChild(mk(`시장: ${o.phase}`, o.phase==='불장'?'ok':o.phase==='하락장'?'danger':'warn'));
-  frag.appendChild(mk(`위험도: ${o.risk}`, o.risk==='낮음'?'ok':o.risk==='보통'?'warn':'danger'));
-  frag.appendChild(mk(`상승 예상 ${o.upEst.toFixed(1)}%`, 'ok'));
-  frag.appendChild(mk(`하락 예상 ${o.downEst.toFixed(1)}%`, 'danger'));
-  frag.appendChild(mk(`현재가 ₩${fmtPrice(o.price,o.price)}`));
-  chips.replaceChildren(frag);
-}
-
-/* ===== 실시간 급등 ===== */
-async function refreshTop(){
-  try{
-    const u = await (await fetch(`${APP.UPBIT_API_BASE}?fn=top&n=${APP.TOP_N}`,{cache:'no-store'})).json();
-    const b = await (await fetch(`${APP.BITHUMB_API_BASE}?fn=top&n=${APP.TOP_N}`,{cache:'no-store'})).json();
-    renderTop('#topU', u, '업비트'); $('#tsU').textContent = new Date().toLocaleTimeString('ko-KR');
-    renderTop('#topB', b, '빗썸');   $('#tsB').textContent = new Date().toLocaleTimeString('ko-KR');
-  }catch(e){ /* 무시 */ }
-}
-function renderTop(sel, rows, ex){
-  const host=$(sel); const frag=document.createDocumentFragment();
-  const grid=document.createElement('div'); grid.style.display='grid'; grid.style.gap='6px'; grid.style.gridTemplateColumns='1fr 80px';
-  (rows||[]).forEach(v=>{
-    const left=document.createElement('div'); left.className='card'; left.style.display='flex'; left.style.justifyContent='space-between';
-    left.innerHTML=`<span>${ex} ${v.sym}</span><b class="${v.chg>=0?'up':'down'}">${pfmt(v.chg)}</b>`;
-    grid.appendChild(left);
-  });
-  frag.appendChild(grid); host.replaceChildren(frag);
-}
-
-/* ===== 검색 ===== */
-let CUR_EX='UPBIT';
-$('#tabUp').onclick=()=>{CUR_EX='UPBIT'; $('#tabUp').classList.add('on'); $('#tabBh').classList.remove('on');};
-$('#tabBh').onclick=()=>{CUR_EX='BITHUMB'; $('#tabBh').classList.add('on'); $('#tabUp').classList.remove('on');};
-
-$('#btn').onclick=doSearch;
-$('#q').addEventListener('keydown',e=>{ if(e.key==='Enter') doSearch(); });
-
-async function doSearch(){
-  const raw = ($('#q').value||'').trim();
-  if(!raw){ alert('코인명/심볼/시장 입력'); return; }
-
-  try{
-    if(CUR_EX==='UPBIT') await searchUpbit(raw);
-    else await searchBithumb(raw);
-  }catch(e){
-    $('#result').innerHTML = `<tr><td colspan="10" class="down">실패: ${e.message||e}</td></tr>`;
-  }
-}
-
-async function searchUpbit(q){
-  // 1) 마켓 매칭
-  const markets = await (await fetch(`${APP.UPBIT_API_BASE}?fn=markets`,{cache:'no-store'})).json();
-  const KRW = markets.filter(m=>(m.market||'').startsWith('KRW-'));
-  const find = KRW.find(m=>{
-    const s=(m.market||'').toUpperCase(); const ko=(m.korean_name||'').toLowerCase(); const en=(m.english_name||'').toLowerCase();
-    const Q=q.toLowerCase(); const U=q.toUpperCase();
-    return s===U || s.endsWith('-'+U) || ko===Q || en===Q || ko.includes(Q) || en.includes(Q);
-  }) || KRW.find(m=> (m.market||'').toUpperCase().endsWith('-'+q.toUpperCase()));
-  const market = find ? find.market : 'KRW-BTC';
-
-  // 2) 캔들
-  const c1 = await (await fetch(`${APP.UPBIT_API_BASE}?fn=candles&minutes=1&market=${encodeURIComponent(market)}&count=240`,{cache:'no-store'})).json();
-  if(!Array.isArray(c1)||!c1.length) throw new Error('데이터 없음');
-  const rows = c1.reverse().map(x=>({t:new Date(x.candle_date_time_kst||x.timestamp),c:x.trade_price,h:x.high_price,l:x.low_price,v:x.candle_acc_trade_volume}));
-  showTargets(rows, market, find?.korean_name || market.replace('KRW-',''));
-}
-
-async function searchBithumb(q){
-  // 빗썸은 심볼 한글명 매핑이 제한적 → 바로 급등/심볼 기준으로 간단하게 계산
-  // 실시간 검색 로직은 업비트와 동일한 UI 유지 위해 가짜 가격 계산은 생략, 안내만.
-  $('#result').innerHTML=`<tr><td colspan="10">빗썸은 상세 타점계산은 준비중입니다. 상단 "실시간 급등(빗썸)" 목록을 참고하세요.</td></tr>`;
-  $('#oneLine').textContent='빗썸 상세 타점은 추후 온체인/캔들 연동 후 활성화됩니다.';
-  paintChips({phase:'중립',risk:'보통',upEst:0.0,downEst:0.0,price:0});
-}
-
-/* ===== 타점 계산(업비트) ===== */
-function showTargets(candles, market, name){
-  const c=candles.map(x=>x.c), h=candles.map(x=>x.h), l=candles.map(x=>x.l);
-  const price=c.at(-1);
-  const ema20=EMA(c,20).at(-1), ema50=EMA(c,50).at(-1);
-  const rsiArr=RSI(c,14), rsi=rsiArr.at(-1)||50;
-  const atr=ATR(h,l,c,14).at(-1)||0, atrPct=atr/price*100;
-  const {hh,ll}=hhll(c,120);
-
-  // Fibo 근사치
-  const f382 = hh - (hh-ll)*0.382;
-  const f5   = hh - (hh-ll)*0.5;
-  const f618 = hh - (hh-ll)*0.618;
-  const ext127 = hh + (hh-ll)*0.272;
-  const ext1618= hh + (hh-ll)*0.618;
-
-  const upTrend = ema20>=ema50;
-  let buy1, buy2, sell1, sell2, stop;
-  if(upTrend){
-    buy1=Math.min(ema20, f382);
-    buy2=Math.min(f5, f618);
-    sell1=Math.max(hh, ext127);
-    sell2=Math.max(sell1*1.02, ext1618);
-    stop =Math.min(buy1-atr*1.1, f618-atr*0.5);
-  }else{
-    buy1=Math.min(f5, f618);
-    buy2=f618*0.985;
-    sell1=Math.max(ema50, f382);
-    sell2=Math.max(hh, sell1*1.03);
-    stop=Math.min(buy1-atr*1.0, ll-atr*0.3);
-  }
-
-  // 상승/하락 예상치(간단): RSI 편차와 ATR 기반 (±%)
-  const bias = (rsi-50)/2.2;                // rsi 72 → +10% 근사
-  const volAdj = Math.min(8, atrPct*0.8);   // 변동성 보정
-  const upEst   = Math.max(0, bias + (upTrend? 4: 1)) + Math.max(0, 3 - volAdj*0.3);
-  const downEst = Math.max(0, -bias + (!upTrend? 4: 1)) + Math.max(0, volAdj*0.2);
-
-  const phase = marketPhase(rsi,ema20,ema50);
-  const risk  = riskFromAtrPct(atrPct);
-
-  paintChips({phase,risk,upEst,downEst,price});
-  $('#oneLine').textContent = `[${name}] ${witty(phase,risk)}`;
-
-  $('#result').innerHTML = `<tr>
-    <td>1분봉</td>
-    <td>${phase}</td>
-    <td>${risk}</td>
-    <td class="up">${upEst.toFixed(1)}%</td>
-    <td class="down">${downEst.toFixed(1)}%</td>
-    <td class="right mono">${fmtPrice(buy1, price)}</td>
-    <td class="right mono">${fmtPrice(buy2, price)}</td>
-    <td class="right mono">${fmtPrice(sell1, price)}</td>
-    <td class="right mono">${fmtPrice(sell2, price)}</td>
-    <td class="right mono">${fmtPrice(stop,  price)}</td>
-  </tr>`;
-}
-
-/* ===== 초기 구동 ===== */
-refreshTop(); setInterval(refreshTop, APP.TOP_INTERVAL_MS);
+  const vercel = "https://satoshi-wallet-2025-vdlv.vercel.app"; // ← 본인 Vercel 주소
+  const target = vercel + location.pathname + location.search + location.hash;
+  location.replace(target);
 </script>
-</body>
-</html>
+<p>자동으로 이동하지 않으면 <a id="go">여기</a>를 클릭하세요.</p>
+<script>document.getElementById('go').href = vercel;</script>
